Fix overflow issues

--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -13,6 +13,7 @@
 
     @media screen and (max-width: $breakpoint-mobile) {
       clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+      overflow: hidden;
     }
 
     &__background {
@@ -22,11 +23,9 @@
       background: url("/background.svg") $blue-300;
       background-size: cover;
       clip-path: polygon(0 0, 100% 0, 100% 60%, 0 100%);
-      transform: scaleZ(1);
 
       @media screen and (max-width: $breakpoint-mobile) {
         clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-        overflow: hidden;
 
         &::after {
           content: " ";
